TEST_PROGRAMS/INVALID/07/forloop_curly_down.go
package main

func f(a int) int{
	a,b :=0,1
	for i:=0; i<n ;i++
	{
	a,b=b,a+b
	}
	return a
}
